// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoji native renders correctly native emoji 1`] = `
<span
  aria-label="☝️, point_up"
  class="emoji-mart-emoji"
>
  <span
    class="emoji-set-apple emoji-type-native"
  >
    ☝️
  </span>
</span>
`;

exports[`Emoji renders correctly 1`] = `
<span
  aria-label="☝️, point_up"
  class="emoji-mart-emoji"
>
  <span
    class="emoji-set-apple emoji-type-image"
    style="background-position: 94.74% 12.28%;"
  >
    
  </span>
</span>
`;

exports[`Emoji renders correctly native emoji 1`] = `
<span
  aria-label="☝️, point_up"
  class="emoji-mart-emoji"
>
  <span
    class="emoji-set-apple emoji-type-native"
    style="background-position: 94.74% 12.28%;"
  >
    ☝️
  </span>
</span>
`;
